# OpenTron

./: .env.example  .gitignore  ACTION_ITEMS.md  AGENTS.md  AGENTS_IMPLEMENTATION.md  AI_POWERED_MULTI_AGENT.md  ARCHITECTURE_NATIVE_INTEGRATION.md  ARCHITECTURE_VERIFICATION.md  BACKEND_FRONTEND_INTEGRATION.md  BACKEND_RESTART_LOG.md  BACKWARD_COMPATIBILITY_VERIFIED.md  BOOT_FAILURE_ANALYSIS.md  BUILD_INSTRUCTIONS.md  BUILD_LAUNCH_REPORT.md  BUILD_SCRIPT_EXECUTION_REPORT.md  BUILD_STATUS.txt  BUNDLED_JRE_EXPLANATION.md  CHANGELOG.md  CHAT_FIX_STATUS.md  CI_CD_COMPLETE.md  CI_CD_QUICKSTART.md  CI_CD_SETUP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COORDINATOR_FIXES.md  COORDINATOR_FIX_COMPLETE.md  COST_COMPARISON_FIX.md  CUTOVER_PLAN.md  DB_INTEGRATION_STATUS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DOCKER_AGENT_INTEGRATION.md  DOCKER_POSTGRES_SETUP.md  ELEVENLABS_INTEGRATION.md  EXECUTIVE_SUMMARY.md  FILE_GUIDE.md  FINAL_BUILD_REPORT.md  FINAL_FRONTEND_BACKEND_VERDICT.txt  FINAL_LAUNCH_REPORT.md  FINAL_REVIEW.md  (+93 more)
.github/workflows/: desktop-app-build.yml  java-backend.yml  native-backend-build.yml  release.yml  upload-release-assets.yml
_includes/: head-custom.html
configs/opentron/: config.toml
deploy/docker/: .env.example  Dockerfile  Dockerfile.gpu  Dockerfile.gpu.rocm  Dockerfile.sandbox  README.md  docker-compose.gpu.nvidia.yml  docker-compose.gpu.rocm.yml  docker-compose.yml
deploy/launchd/: com.OpenTron.plist
deploy/posthog/: posthog-hetzner-prep.sh
deploy/systemd/: OpenTron.service
deploy/windows/: README.md  TRON-service.ps1  install.ps1
docs/: desktop-auto-update.md  downloads.md  gen_install_script.py  index.md  leaderboard.md  telemetry.md
docs/architecture/: agents.md  channels.md  design-principles.md  engine.md  intelligence.md  learning.md  memory.md  overview.md  query-flow.md  security.md  skills.md
docs/deployment/: api-server.md  docker.md  index.md  launchd.md  systemd.md
docs/design/: 2026-05-05-apple-silicon-pearl-mining-design.md  2026-05-05-apple-silicon-pearl-mining-plan-v1.md  2026-05-05-pearl-coordination-discussion-draft.md  2026-05-05-vllm-pearl-mining-integration-design.md  2026-05-05-vllm-pearl-mining-integration-plan.md
docs/development/: contributing.md  (+5 more)
downloads/: OpenTron_1.0.1.0_x64__bwdm9pw6jm6qw.msix  OpenTron_1.0.1_x64_en-US.msi
frontend/: build-log.txt  build-output.txt  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
java/: 404_ERROR_FIXED.txt  COMPLETE_DEPLOYMENT_GUIDE.txt  CRITICAL_FIXES_SESSION_2.txt  ENGINE_CONFIG_FIX.txt  FINAL_VERIFICATION.txt  JARS_BUILT_SUMMARY.txt
rust/: Cargo.toml  rust-toolchain.toml
rust/crates/openjarvis-agents/: Cargo.toml
rust/crates/openjarvis-agents/src/: helpers.rs  monitor_operative.rs  native_openhands.rs  native_react.rs  orchestrator.rs  simple.rs  traits.rs  utils.rs
rust/crates/openjarvis-learning/: Cargo.toml
rust/crates/openjarvis-learning/src/: agent_evolver.rs  bandit.rs  grpo.rs  heuristic.rs  learning_orchestrator.rs  orchestrator_types.rs  reward.rs  router_enum.rs  training_data.rs  traits.rs
rust/crates/openjarvis-learning/src/optimize/: engine.rs  llm_optimizer.rs  mod.rs  search_space.rs  store.rs  types.rs
rust/crates/openjarvis-mcp/: Cargo.toml
rust/crates/openjarvis-mcp/src/: server.rs
rust/crates/openjarvis-python/: Cargo.toml  pyproject.toml
rust/crates/openjarvis-python/src/: a2a.rs  agents.rs  core.rs  engine.rs  learning.rs  lib.rs  mcp.rs  recipes.rs  scheduler.rs  security.rs  sessions.rs  skills.rs  storage.rs  telemetry.rs  templates.rs  tools.rs  traces.rs  workflow.rs
rust/crates/openjarvis-security/: Cargo.toml
rust/crates/openjarvis-security/src/: audit.rs  guardrails.rs
rust/crates/openjarvis-telemetry/: Cargo.toml
rust/crates/openjarvis-telemetry/src/: aggregator.rs  instrumented.rs  store.rs
scripts/: build-native-desktop.bat  build-native-desktop.ps1  build-native-desktop.sh  create-release.ps1  create-release.sh  fix_java_bom.py  index_docs.py  oauth_all.py  quickstart.sh  smoke_framework_comparison.sh
tests/: conftest.py  test_digest_integration.py  test_query_orchestrator.py  test_vision.py
(+1074 files in other folders)
