[package]
name = "OpenTron-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
OpenTron-core = { path = "../OpenTron-core" }
OpenTron-tools = { path = "../OpenTron-tools" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

