[package]
name = "OpenTron-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "OpenTron_rust"
crate-type = ["cdylib"]

[dependencies]
OpenTron-core = { path = "../OpenTron-core" }
OpenTron-engine = { path = "../OpenTron-engine" }
OpenTron-security = { path = "../OpenTron-security" }
OpenTron-tools = { path = "../OpenTron-tools" }
OpenTron-agents = { path = "../OpenTron-agents" }
OpenTron-traces = { path = "../OpenTron-traces" }
OpenTron-telemetry = { path = "../OpenTron-telemetry" }
OpenTron-learning = { path = "../OpenTron-learning" }
OpenTron-mcp = { path = "../OpenTron-mcp" }
OpenTron-sessions = { path = "../OpenTron-sessions" }
OpenTron-workflow = { path = "../OpenTron-workflow" }
OpenTron-skills = { path = "../OpenTron-skills" }
OpenTron-recipes = { path = "../OpenTron-recipes" }
OpenTron-templates = { path = "../OpenTron-templates" }
OpenTron-a2a = { path = "../OpenTron-a2a" }
OpenTron-scheduler = { path = "../OpenTron-scheduler" }
pyo3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }

