[package]
name = "OpenTron-security"
version = "0.1.0"
edition = "2021"

[dependencies]
OpenTron-core = { path = "../OpenTron-core" }
OpenTron-engine = { path = "../OpenTron-engine" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
sha2 = { workspace = true }
rusqlite = { workspace = true }
parking_lot = { workspace = true }
async-trait = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
url = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"

